# InductIQ-Edge-Native-Health-Monitoring-for-Induction-Motors

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-rpi.txt  requirements.txt  run.py
.github/workflows/: ci.yml  deploy.yml
config/: mosquitto.conf  platform.yaml
data/: .gitkeep
data/archives/inference/: .gitkeep
data/archives/telemetry/: .gitkeep
deploy/: install.sh
deploy/systemd/: edge-archiver.service  edge-archiver.timer  edge-mosquitto.service  edge-platform.service
docs/: architecture.md  cicd.md
edge_platform/: __init__.py  __main__.py  config.py  platform.py
edge_platform/ai/: __init__.py  classifier.py  pipeline.py  predictive.py  statistical.py  unknown_fault.py
edge_platform/api/: __init__.py  app.py  security.py
edge_platform/cloud/: __init__.py  dynamo_store.py
edge_platform/events/: __init__.py  alert_engine.py  correlator.py
edge_platform/features/: __init__.py  extractor.py
edge_platform/health/: __init__.py  monitor.py
edge_platform/models/: __init__.py  device.py  events.py  inference.py  telemetry.py
edge_platform/mqtt/: __init__.py  client.py  topics.py
edge_platform/sensors/: __init__.py  collector.py  run_sensors.py
edge_platform/simulator/: __init__.py  motor_sim.py
edge_platform/storage/: __init__.py  archive_runner.py  archiver.py  init_db.py  sqlite_store.py
edge_platform/stream/: __init__.py  processor.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_features.py  test_models.py  test_storage.py
(+10 files in other folders)
